--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		
 		<title>Takdirul Islam Shishir</title>
 		
-		<link rel="icon" type="image/x-icon" href="/assets/images/site/favicon.ico"
+		<link rel="icon" type="image/x-icon" href="https://i.ibb.co/sJgRkVg/photostudio-1539578036727.jpg"
 		<link rel='stylesheet' type='text/css' href='bootstrap/css/bootstrap.min.css' >
 		<link rel='stylesheet' type='text/css' href='css/linea.css' >
 		<link rel='stylesheet' type='text/css' href='css/ionicons.min.css' >
