--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 						<div class="row">
 							<div class="col-lg-6">
 								<div class="hero-text">
-									<h2>Takdirul Islam Shishir</h2>
+									<h2>Takdirul Islam</h2>
 									<p>I’m a Potato who in love with Programming, Photography , Web Security and Creative Design.</p>
 								</div>
 								<div class="hero-info">
