--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 							<div class="col-lg-6">
 								<div class="hero-text">
 									<h2>Takdirul Islam</h2>
-									<p>I’m a Potato who in love with Programming, Photography , Web Security and Creative Design.</p>
+									<p>I’m a Potato who is in love with Programming, Photography , Web Security and Creative Design.</p>
 								</div>
 								<div class="hero-info">
 									<h2>General Info</h2>
